Update to add explicit :results silent

--- a/emacs-nougat/nougat/emacs/autosaves.org
+++ b/emacs-nougat/nougat/emacs/autosaves.org
@@ -30,6 +30,6 @@ Here, save every 20 secs or 20 keystrokes.
 #+END_SRC
 
 ** disable lockfiles
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (setq create-lockfiles nil)
 #+end_src
