--- a/emacs-nougat/nougat/emacs/avy.org
+++ b/emacs-nougat/nougat/emacs/avy.org
@@ -1,6 +1,6 @@
 * avy
 Avy is awesome; set some keybindings.
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (global-set-key (kbd "C-;") 'avy-goto-char)
 (global-set-key (kbd "C-:") 'avy-goto-char-2)
 (global-set-key (kbd "M-g f") 'avy-goto-line)
