--- a/emacs-nougat/nougat/emacs/diff-kill.org
+++ b/emacs-nougat/nougat/emacs/diff-kill.org
@@ -3,7 +3,7 @@ When killing a buffer that has unsaved changes, there's no way to see the diff.
 This provides one.  Based on [[https://emacs.stackexchange.com/questions/3245/kill-buffer-prompt-with-option-to-diff-the-changes][this]] SO answer.
 
 #+CAPTION: define a new  kill-buffer
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (defun diff-kill-this-buffer ()
   (interactive)
   (catch 'quit
@@ -24,6 +24,6 @@ This provides one.  Based on [[https://emacs.stackexchange.com/questions/3245/ki
 
 
 #+CAPTION: rebind key
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (global-set-key [remap kill-buffer] 'diff-kill-this-buffer)
 #+end_src
