--- a/emacs-nougat/nougat/emacs/editing.org
+++ b/emacs-nougat/nougat/emacs/editing.org
@@ -14,7 +14,7 @@ is the standard behaviour of visual-line-mode, it wraps lines at fill-column. If
 fill-column is too large for the window, the text is wrapped at the window edge.
 #+end_quote
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (use-package visual-fill-column
 :config (setq visual-fill-column-width 85))
 #+end_src
@@ -30,11 +30,11 @@ fill-column is too large for the window, the text is wrapped at the window edge.
 #+END_SRC
 
 *** ssh for tramp
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (setq tramp-default-method "ssh")
 #+end_src
 
 *** click-to-select-region
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (define-key global-map (kbd "<S-down-mouse-1>") 'mouse-save-then-kill)
 #+end_src
