--- a/emacs-nougat/nougat/emacs/flycheck.org
+++ b/emacs-nougat/nougat/emacs/flycheck.org
@@ -2,7 +2,7 @@
 Flycheck is a modern on-the-fly syntax checking extension for GNU Emacs, intended as
 replacement for the older Flymake extension which is part of GNU Emacs.
 ** install
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package flycheck
 ;;  :ensure t
   :straight (flycheck :type git :host github :repo "flycheck/flycheck")
@@ -11,7 +11,7 @@ replacement for the older Flymake extension which is part of GNU Emacs.
 #+end_src
 
 ** COMMENT helm-flycheck
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package helm-flycheck)
 (require 'helm-flycheck)
 (eval-after-load 'flycheck
@@ -20,7 +20,7 @@ replacement for the older Flymake extension which is part of GNU Emacs.
 
 ** flycheck-proselint
 #+CAPTION: enable proselint support for flycheck
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (flycheck-define-checker proselint
   "A linter for prose."
   :command ("proselint" source-inplace)
@@ -35,7 +35,7 @@ replacement for the older Flymake extension which is part of GNU Emacs.
 
 ** write-good
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package writegood-mode
 :straight (writegood-mode
            :type git
@@ -47,6 +47,6 @@ replacement for the older Flymake extension which is part of GNU Emacs.
 
 ** shell-check
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (add-hook 'sh-mode-hook 'flycheck-mode)
 #+end_src
