--- a/emacs-nougat/nougat/emacs/key-bindings.org
+++ b/emacs-nougat/nougat/emacs/key-bindings.org
@@ -1,7 +1,7 @@
 ** key-bindings
 Set some default keybindings here.
 *** meta n & p
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (global-set-key (kbd "M-p") 'backward-paragraph)
   (global-set-key (kbd "M-n") 'forward-paragraph)
 #+end_src
