--- a/emacs-nougat/nougat/emacs/minor-modes.org
+++ b/emacs-nougat/nougat/emacs/minor-modes.org
@@ -86,7 +86,7 @@ Add some colors to them delimiters!
 
 ** show-paren-mode
 Hilight your other delimiter.
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (show-paren-mode 1)
   (setq show-paren-delay 0)
   (require 'paren)
@@ -119,7 +119,7 @@ Show keybindings, because we have a LOT of them.
 
 ** ispell-minor-mode
 Ispell is nice; aspell is nicer; one day hunspell might also be nice.
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (setq ispell-program-name (expand-file-name
                             (shell-command-to-string "which aspell")))
 #+end_src
