--- a/emacs-nougat/nougat/emacs/neotree.org
+++ b/emacs-nougat/nougat/emacs/neotree.org
@@ -1,7 +1,7 @@
 * COMMENT neotree
 NeoTree is a sidebar-mode for emacs that plays with dired and friends.
 ** install and configure
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
     (use-package neotree
 ;;      :straight (neotree :type git
 ;;                                :host github
@@ -26,7 +26,7 @@ NeoTree is a sidebar-mode for emacs that plays with dired and friends.
 #+end_src
 
 * all the icons
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package all-the-icons
 :config (require 'all-the-icons))
 #+end_src
