--- a/emacs-nougat/nougat/emacs/srspeedbar.org
+++ b/emacs-nougat/nougat/emacs/srspeedbar.org
@@ -1,6 +1,6 @@
 * sr-speedbar
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 ;;; sr-speedbar.el --- Same frame speedbar
 
 ;; Author: Sebastian Rose <sebastian_rose@gmx.de>
