--- a/emacs-nougat/nougat/emacs/undo-tree.org
+++ b/emacs-nougat/nougat/emacs/undo-tree.org
@@ -17,13 +17,13 @@ the undo history.
 Full documentation can be found [[http://www.dr-qubit.org/undo-tree/undo-tree.txt][here]].
 
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package undo-tree
 ;;:config (undo-tree-visualizer-diff t)
 )
 #+end_src
 
 Make undo-tree the default for all modes
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (global-undo-tree-mode)
 #+end_src
