--- a/emacs-nougat/nougat/emacs/ws-butler.org
+++ b/emacs-nougat/nougat/emacs/ws-butler.org
@@ -1,13 +1,13 @@
 * whitespace-butler
 [[https://github.com/lewang/ws-butler][ws-butler]] is an unobtrusive way to trim spaces from the end of lines, which is great.
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package ws-butler
   :straight (ws-butler :type git
              :host github
              :repo "lewang/ws-butler"))
 #+end_src
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (require 'ws-butler)
 ;; enable for programming modes
 ;;(add-hook 'prog-mode-hook #'ws-butler-mode)
