--- a/emacs-nougat/nougat/package-management/straight.org
+++ b/emacs-nougat/nougat/package-management/straight.org
@@ -1,5 +1,5 @@
 ** bootstrap straight
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (let ((bootstrap-file (concat user-emacs-directory "straight/repos/straight.el/bootstrap.el"))
         (bootstrap-version 3))
     (unless (file-exists-p bootstrap-file)
@@ -13,7 +13,7 @@
 #+end_src
 
 ** configure use-package integration
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (setq straight-use-package-by-default t)
   (straight-use-package 'use-package)
   (use-package git)
