--- a/emacs-nougat/nougat/packages/github/gist.org
+++ b/emacs-nougat/nougat/packages/github/gist.org
@@ -1,7 +1,7 @@
 * github
 ** gist
 Enable gist support
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package gist
  :straight (gist :type git
                :host github
