--- a/emacs-nougat/nougat/packages/gitignore/gitignore.org
+++ b/emacs-nougat/nougat/packages/gitignore/gitignore.org
@@ -1,14 +1,14 @@
 * gitignore
 ** Syntax highlighting
 Gitignore syntax highlighting is provided by the [[https://github.com/magit/git-modes/blob/master/gitignore-mode.el][gitignore-mode]] package in magit.
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package gitignore-mode)
 #+end_src
 
 ** gitignore.io
 Access to pre-baked gitignore lists for various languages.
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package gitignore
 :straight (gitignore
            :type git
