--- a/emacs-nougat/nougat/packages/helm/extras/ace-jump-helm-line.org
+++ b/emacs-nougat/nougat/packages/helm/extras/ace-jump-helm-line.org
@@ -1,5 +1,5 @@
 ** ace-jump-helm-line
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (use-package ace-jump-helm-line
     :commands ace-jump-helm-line
     :init (define-key helm-map (kbd "C-;") 'ace-jump-helm-line))
