--- a/emacs-nougat/nougat/packages/helm/extras/helm-flyspell.org
+++ b/emacs-nougat/nougat/packages/helm/extras/helm-flyspell.org
@@ -1,14 +1,14 @@
 * helm-flyspell
 With =flyspell-mode= on, use =C-;= after a word to correct it with Helm.
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (setq ispell-program-name (executable-find "hunspell")
       ispell-dictionary "en_US")
 
 #+end_src
 
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (use-package helm-flyspell
     :bind (:map flyspell-mode-map
                 ("C-;" . helm-flyspell-correct)))
