--- a/emacs-nougat/nougat/packages/helm/extras/helm-projectile.org
+++ b/emacs-nougat/nougat/packages/helm/extras/helm-projectile.org
@@ -1,5 +1,5 @@
 * helm-projectile
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (use-package helm-projectile
    :bind (("C-c p w" . helm-projectile-switch-project)
           ("C-c p G" . helm-projectile-grep)
