--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-bookmarks.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-bookmarks.org
@@ -1,5 +1,5 @@
 * hydra-bookmarks
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
     (defun hydra--view-bookmarks ()
       (interactive)
       (hydra-bookmarks/body)
