--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-elisp.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-elisp.org
@@ -1,5 +1,5 @@
 * hydra-elisp
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (defhydra hydra-elisp (:color blue :hint nil)
     "
                                                            ╭──────┐
