--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-helm.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-helm.org
@@ -15,7 +15,7 @@ This hydra is useful for navigating and invoking features inside Helm buffers.
 #+end_src
 
 ** helm-persistent-kill-buffers
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (defun helm-persistent-kill-buffers (_buffer)
     (unwind-protect
         (dolist (b (helm-marked-candidates))
@@ -28,7 +28,7 @@ This hydra is useful for navigating and invoking features inside Helm buffers.
 #+end_src
 
 ** hydra-helm
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (defhydra hydra-helm (:hint nil :color pink)
     "
     ^^^^^^^^^^^^                                                                 ╭──────┐
