--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-help.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-help.org
@@ -1,5 +1,5 @@
 * hydra-help
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (defhydra hydra-help (:exit t)
   "
   ^^^^^^^^                                                                                  ╭────────┐
