--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-hera.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-hera.org
@@ -8,7 +8,7 @@ Slain by Hercules, Hera created the Hydra constellation.
 This code allows the registration of major-mode specific hydras, and a default
 one. Any hydra is of course free to show the default hydra if wanted.
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   ;; this is an alist of major mode -> hydra body
   (defvar hera-hydras nil)
   ;; the hydra body to run if no major mode specific hydra is set
