--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-mark.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-mark.org
@@ -1,5 +1,5 @@
 * hydra-mark
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (defun unpop-to-mark-command ()
     "Unpop off mark ring. Does nothing if mark ring is empty."
     (interactive)
