--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-org.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-org.org
@@ -1,18 +1,18 @@
 * hydra-org
 ** hydra-org-goto-first-sibling
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (defun hydra-org-goto-first-sibling () (interactive)
          (org-backward-heading-same-level 99999999))
 #+end_src
 
 ** hydra-org-goto-last-sibling
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (defun hydra-org-goto-last-sibling () (interactive)
          (org-forward-heading-same-level 99999999))
 #+end_src
 
 ** hydra-org-parent-level
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (defun hydra-org-parent-level ()
     (interactive)
     (let ((o-point (point)))
