--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
@@ -1,5 +1,5 @@
 ** hydra-projectile
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (defun projectile-run-vterm-other-window (&optional arg)
     "Invoke `vterm' in the project's root.
        Switch to the project specific term buffer if it already exists.
