--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-python.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-python.org
@@ -1,5 +1,5 @@
 * hydra-python
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (defhydra hydra-python (:hint nil :color blue)
     "
   ^^                 ╭────────┐
