--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-register.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-register.org
@@ -1,5 +1,5 @@
 * hydra-registers
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (setq register-preview-delay nil)
   (defhydra hydra-registers (:color pink :hint nil)
     "
