--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-yank-pop.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-yank-pop.org
@@ -1,5 +1,5 @@
 * hydra-yank-pop
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (defhydra hydra-yank-pop (:columns 1 :hint nil)
   "
   prev^^   next
