--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-zoom.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-zoom.org
@@ -1,5 +1,5 @@
 * hydra-zoom
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
     (defhydra hydra-zoom (:color red)
       "
   zoom -- _<f18>_ to close
