--- a/emacs-nougat/nougat/packages/hydra/setup.org
+++ b/emacs-nougat/nougat/packages/hydra/setup.org
@@ -2,7 +2,7 @@
 Hydra provides an easy way to create little pop-up interfaces with a collection of
 related single-key bindings.
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (use-package hydra)
 #+end_src
 
