--- a/emacs-nougat/nougat/packages/ivy/ivy.org
+++ b/emacs-nougat/nougat/packages/ivy/ivy.org
@@ -1,5 +1,5 @@
 * install and configure
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (use-package swiper
     :bind (("C-s" . swiper-isearch)
            ("C-r" . swiper-backward)
@@ -30,7 +30,7 @@
 #+RESULTS:
 
 Configure
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (ivy-mode 1)
   (setq ivy-use-virtual-buffers t)
   (setq ivy-count-format "(%d/%d) ")
@@ -39,7 +39,7 @@ Configure
 
 ** counsel-projectile
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
       (use-package counsel-projectile
        :straight (counsel-projectile :type git
                      :host github
@@ -54,7 +54,7 @@ Configure
 
 ** ivy-bibtex
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
    (use-package ivy-bibtex
     :straight (ivy-bibtex
              :files ("ivy-bibtex.el")
