--- a/emacs-nougat/nougat/packages/org-mode/extras/dynamic-tag-position.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/dynamic-tag-position.org
@@ -1,5 +1,5 @@
 * dynamic tag position :experimental:
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (defvar ba/org-adjust-tags-column t)
   (defvar ba/org-adjust-tags-scale 1.0)
 
