--- a/emacs-nougat/nougat/packages/org-mode/extras/htmlize.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/htmlize.org
@@ -1,6 +1,6 @@
 * htmlize
 [[https://github.com/hniksic/emacs-htmlize][htmlize]] is required for exporting org files to html.
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package htmlize)
 #+end_src
