--- a/emacs-nougat/nougat/packages/org-mode/extras/org-babel.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/org-babel.org
@@ -1,6 +1,6 @@
 * org-babel
 ** add languages to babel
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
     (org-babel-do-load-languages
      'org-babel-load-languages
      '((shell . t)
@@ -12,7 +12,7 @@
 
 
 ** set default header args
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (setq org-babel-default-header-args
         '((:session . "none")
           (:results . "replace")
@@ -26,7 +26,7 @@
 
 
 ** COMMENT applescript support
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
     (use-package ob-applescript
       :after (org)
       :straight (ob-applescript :type git
