--- a/emacs-nougat/nougat/packages/org-mode/extras/org-capture.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/org-capture.org
@@ -1,22 +1,22 @@
 * org-capture
 ** set default notes file
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (setq org-default-notes-file (expand-file-name
                                 (concat my/org-path-name "notes.org")))
 #+end_src
 
 ** bind a key for capture
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (global-set-key (kbd "C-c c") 'org-capture)
 #+end_src
 
 ** automatically visit new capture
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (add-to-list 'org-capture-after-finalize-hook 'org-capture-goto-last-stored)
 #+end_src
 
 ** configure some templates
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (setq org-capture-templates
         '(
           ("q" "Quote")
