--- a/emacs-nougat/nougat/packages/org-mode/extras/org-download.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/org-download.org
@@ -1,6 +1,6 @@
 * org-download
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (use-package org-download
    :straight (org-download :type git
                  :host github
