--- a/emacs-nougat/nougat/packages/org-mode/extras/org-export.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/org-export.org
@@ -1,14 +1,14 @@
 ** LaTeX export settings
 *** use smart quotes when appropriate
 Newer org-modes support sane quoting
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (setq org-export-with-smart-quotes t)
 #+end_src
 
 *** set latex as xelatex
 xelatex (or luatex) are usually provided with texlive. They allow, among other things,
 native use of truetype fonts.
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (setq org-latex-compiler "xelatex")
 #+end_src
 
