--- a/emacs-nougat/nougat/packages/org-mode/extras/org-projectile.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/org-projectile.org
@@ -3,7 +3,7 @@
 associated with projectile projects.
 
 #+CAPTION: require org projectile
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package org-projectile
   :bind (("C-c n p" . org-projectile-project-todo-completing-read)
          ("C-c c" . org-capture))
