--- a/emacs-nougat/nougat/packages/org-mode/extras/org-tidy.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/org-tidy.org
@@ -2,7 +2,7 @@
 Tidying will fold all headings globally, except the heading at the point. It will show the
 heading's entry and folded children.
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (defun org-tidy--tidy (&rest args)
     (save-excursion
       (org-global-cycle 1)
