--- a/emacs-nougat/nougat/packages/org-mode/extras/ox-beamer.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/ox-beamer.org
@@ -1,6 +1,6 @@
 * ox-beamer
 add beamer export
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (require 'ox-beamer)
 (setq org-beamer-mode t)
 (require 'ox-latex)
