--- a/emacs-nougat/nougat/packages/org-mode/extras/ox-gfm.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/ox-gfm.org
@@ -1,7 +1,7 @@
 * ox-gfm
 export to github-flavored markdown from the exporter menu with [[https://github.com/larstvei/ox-gfm][ox-gfm]].
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package ox-gfm)
 (eval-after-load "org"
   '(require 'ox-gfm nil t))
