--- a/emacs-nougat/nougat/packages/org-mode/extras/ox-hugo.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/ox-hugo.org
@@ -1,7 +1,7 @@
 * ox-hugo
 [[https://github.com/kaushalmodi/ox-hugo][ox-hugo]] is an exporter for the hugo static site generator.
 #+CAPTION: enable and configure
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package ox-hugo)
 (eval-after-load "org"
 '(require 'ox-hugo nil t))
