--- a/emacs-nougat/nougat/packages/org-mode/extras/ox-jira.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/ox-jira.org
@@ -2,7 +2,7 @@
 [[https://github.com/stig/ox-jira.el][This module]] plugs into the regular Org Export Engine and transforms Org files to JIRA
 markup for pasting into JIRA tickets & comments.
 #+CAPTION: Enable ox-jira
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package ox-jira
  :straight (ox-jira :type git :host github :repo "stig/ox-jira.el" :branch "trunk")
  )
