--- a/emacs-nougat/nougat/packages/org-mode/extras/ox-rst.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/ox-rst.org
@@ -2,7 +2,7 @@
 Restructured text might be nice for writng docstrings, but it's crap for everything
 else!
 #+CAPTION: export org to restructured text
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package ox-rst)
 (eval-after-load "org"
     '(require 'ox-rst nil t))
