--- a/emacs-nougat/nougat/packages/org-mode/extras/toc-org.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/toc-org.org
@@ -3,11 +3,11 @@
 [[https://github.com/snosov1/toc-org][toc-org]] helps maintain an up-to-date table of contents in org files without
 exporting (useful primarily for readme files on GitHub).
 #+CAPTION: Add toc-org
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package toc-org)
 #+end_src
 #+CAPTION: Enable toc-org
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (if (require 'toc-org nil t)
     (add-hook 'org-mode-hook 'toc-org-enable)
   (warn "toc-org not found"))
