--- a/emacs-nougat/nougat/packages/pandoc-mode/pandoc-mode.org
+++ b/emacs-nougat/nougat/packages/pandoc-mode/pandoc-mode.org
@@ -6,11 +6,11 @@ functions on buffers whose major mode is a supported type.  To bring up a contex
 menu of supported actions, type =C-c /= while the mode is enabled.
 
 #+CAPTION: Add pandoc-mode support
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package pandoc-mode)
 #+end_src
 #+CAPTION: Automatically enable for mode types
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (add-hook 'markdown-mode-hook 'pandoc-mode)
 (add-hook 'org-mode-hook 'pandoc-mode)
 #+end_src
