--- a/emacs-nougat/nougat/packages/projectile/discover-projects.org
+++ b/emacs-nougat/nougat/packages/projectile/discover-projects.org
@@ -1,7 +1,7 @@
 * COMMENT discover projects
 Look for project directories here by default.
 ** projectile-project-directory
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (defvar projectile-project-directory (expand-file-name "~/Projects"))
 
   (projectile-discover-projects-in-directory
