--- a/emacs-nougat/nougat/packages/ranger/ranger.org
+++ b/emacs-nougat/nougat/packages/ranger/ranger.org
@@ -1,6 +1,6 @@
 * Ranger
 Ranger is a dired add-on that adds shiny features.
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package ranger)
 (require 'ranger)
 #+end_src
