--- a/emacs-nougat/nougat/packages/yasnippet/yasnippet.org
+++ b/emacs-nougat/nougat/packages/yasnippet/yasnippet.org
@@ -1,7 +1,7 @@
 * install
 
 This assumes that snippets are stored or symlinked to =${HOME}/.emacs.d/snippets/*=
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package yasnippet)
 (setq yas-snippet-dirs
       (list (concat (file-name-as-directory user-emacs-directory)
