--- a/emacs-nougat/nougat/support/applescript/apples-mode.org
+++ b/emacs-nougat/nougat/support/applescript/apples-mode.org
@@ -1,5 +1,5 @@
 * apples-mode
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (use-package apples-mode
     :config
     (add-to-list 'auto-mode-alist '("\\.as\\'" . apples-mode)))
