--- a/emacs-nougat/nougat/support/lisp/lispy-mode.org
+++ b/emacs-nougat/nougat/support/lisp/lispy-mode.org
@@ -1,11 +1,11 @@
 * lispy-mode
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   ;; (use-package lispy
   ;;   :config
   ;;   (add-hook 'emacs-lisp-mode-hook (lambda () (lispy-mode 1)))
   ;;   (add-hook 'lisp-interaction-mode-hook (lambda () (lispy-mode 1))))
 #+end_src
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 
   (use-package lispy
     :general
