--- a/emacs-nougat/nougat/support/markdown/markdown-mode.org
+++ b/emacs-nougat/nougat/support/markdown/markdown-mode.org
@@ -1,6 +1,6 @@
 * markdown-mode
 All the internet uses it.
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (straight-use-package 'markdown-mode)
   (use-package markdown-mode
     :ensure nil
