--- a/emacs-nougat/nougat/emacs/dired.org
+++ b/emacs-nougat/nougat/emacs/dired.org
@@ -2,12 +2,12 @@
 =dired= is emacs' built in file manager.
 ** dired-sort-dirs
 Dired sorting should lump directories first because I'm used to it.
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
       (setq dired-listing-switches "-alh --group-directories-first")
   (eval-after-load "dired" '(progn (define-key dired-mode-map (kbd "C-c w") 'dired-toggle-read-only)))
 #+end_src
 ** transparently create directories when renaming
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (defadvice dired-mark-read-file-name (after rv:dired-create-dir-when-needed (prompt dir op-symbol arg files &optional default) activate)
     (when (member op-symbol '(copy move))
       (let ((directory-name (if (< 1 (length files))
