--- a/emacs-nougat/nougat/emacs/fonts.org
+++ b/emacs-nougat/nougat/emacs/fonts.org
@@ -1,6 +1,6 @@
 * menlo
 Menlo is a wonderful monospace font.  On modern displays, 12-14 point is a
 reasonable size for old eyes.
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (add-to-list 'default-frame-alist '(font . "Menlo 12"))
 #+end_src
