--- a/emacs-nougat/nougat/emacs/popwin.org
+++ b/emacs-nougat/nougat/emacs/popwin.org
@@ -1,7 +1,7 @@
 * popwin
 [[https://github.com/m2ym/popwin-el][popwin]] solves some stupid buffer persistence issues.
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package popwin)
 
 (require 'popwin)
