--- a/emacs-nougat/nougat/packages/csv-mode/csv-mode.org
+++ b/emacs-nougat/nougat/packages/csv-mode/csv-mode.org
@@ -1,6 +1,6 @@
 * CSV-mode
 #+CAPTION: enable CSV support
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package csv-mode
   :mode ("\\.csv$" . csv-mode))
 
