--- a/emacs-nougat/nougat/packages/helm/extras/helm-company.org
+++ b/emacs-nougat/nougat/packages/helm/extras/helm-company.org
@@ -1,5 +1,5 @@
 * helm-company
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (use-package helm-company
     :bind (("C-\"" . helm-company)))
 #+end_src
