--- a/emacs-nougat/nougat/packages/helm/extras/helm-descbinds.org
+++ b/emacs-nougat/nougat/packages/helm/extras/helm-descbinds.org
@@ -1,6 +1,6 @@
 * helm-descbinds
 Use =C-h b= to inspect current bindings with Helm.
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (use-package helm-descbinds
     :commands helm-descbinds
     :bind (("C-h b" . helm-descbinds)))
