--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-window.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-window.org
@@ -1,5 +1,5 @@
 * hydra-window
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (use-package ace-window)
 
   (defhydra hydra-window (:hint nil)
