--- a/emacs-nougat/nougat/packages/magit/setup.org
+++ b/emacs-nougat/nougat/packages/magit/setup.org
@@ -14,7 +14,7 @@
 
 * COMMENT ghub
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package ghub
  :straight (ghub :type git
                :host github
@@ -23,7 +23,7 @@
 #+end_src
 
 * COMMENT transient
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package transient
  :straight (transient :type git
                :host github
@@ -33,7 +33,7 @@
 
 * forge
 Forge interfaces with github and gitlab
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
         ;; (use-package forge
         ;;  :straight (forge :type git
         ;;                :host github
