--- a/emacs-nougat/nougat/packages/org-mode/extras/gnuplot.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/gnuplot.org
@@ -1,5 +1,5 @@
 * gnuplot
 GNUplot integrates with org.
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package gnuplot-mode)
 #+end_src
