--- a/emacs-nougat/nougat/packages/org-mode/extras/org-roam.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/org-roam.org
@@ -1,6 +1,6 @@
 * org-roam
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package org-roam
  :straight (org-roam :type git
                :host github
