--- a/emacs-nougat/nougat/packages/projectile/setup.org
+++ b/emacs-nougat/nougat/packages/projectile/setup.org
@@ -1,5 +1,5 @@
 * setup
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
   (use-package projectile
     :init
     (setq projectile-enable-caching t)
