--- a/emacs-nougat/nougat/support/direnv/direnv.org
+++ b/emacs-nougat/nougat/support/direnv/direnv.org
@@ -12,7 +12,7 @@ will be started with the correct environment variables set.
 #+end_quote
 
 #+CAPTION: enable direnv-emacs
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (use-package direnv
  :config
  (direnv-mode))
