--- a/emacs-nougat/nougat/support/latex/latex.org
+++ b/emacs-nougat/nougat/support/latex/latex.org
@@ -1,6 +1,6 @@
 * AuCTeX
 AuCTex is a major mode for managing the compilation of latex documents.
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results silent
 (if (not (eq system-type 'darwin))
   (straight-use-package 'auctex)
   ;; Use xetex by default, so we can use ttf fonts.
